// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SideBar Component > should match snapshot with default props 1`] = `
<div
  aria-label="Mobile navigation menu"
  data-testid="burger-menu"
>
  <ul>
    <li
      style="cursor: pointer;"
    >
      <a
        aria-label="Go to DOSIMEX homepage"
        href="/"
      >
        <img
          alt="Dosimex Logo"
          height="22"
          loading="lazy"
          quality="40"
          src="/Images/logo_dosimex_new.webp"
          width="106"
        />
      </a>
    </li>
    <li
      class="menu-item"
    >
      <div
        data-testid="nav-item"
      >
        Software
      </div>
    </li>
    <li
      class="menu-item"
    >
      <div
        data-testid="nav-item"
      >
        Training
      </div>
    </li>
    <li
      class="menu-item"
    >
      <div
        data-testid="nav-item"
      >
        Manuals
      </div>
    </li>
    <li
      class="menu-item"
    >
      <div
        data-testid="nav-item"
      >
        About
      </div>
    </li>
    <li
      class="menu-item"
    >
      <div
        data-testid="nav-item"
      >
        Contact
      </div>
    </li>
    <div
      data-testid="sidebar-language-switch"
    >
      en
    </div>
  </ul>
  <div
    style="display: flex; flex-direction: column; gap: 1.5vh; margin-top: 2vh;"
  >
    <a
      data-testid="sidebar-quote-button"
      href="/Product#buy"
      style="border: 2px solid var(--main); background-color: white; color: var(--main);"
    >
      Request a quote
    </a>
    <a
      data-testid="sidebar-button"
      href="https://dosismart.com"
    >
      Get Started
    </a>
  </div>
</div>
`;

exports[`SideBar Component > should match snapshot with text prop 1`] = `
<div
  aria-label="Mobile navigation menu"
  data-testid="burger-menu"
  text="[object Object]"
>
  <ul>
    <li
      style="cursor: pointer;"
    >
      <a
        aria-label="Go to DOSIMEX homepage"
        href="/"
      >
        <img
          alt="Dosimex Logo"
          height="22"
          loading="lazy"
          quality="40"
          src="/Images/logo_dosimex_new.webp"
          width="106"
        />
      </a>
    </li>
    <li
      class="menu-item"
    >
      <div
        data-testid="nav-item"
      >
        Software
      </div>
    </li>
    <li
      class="menu-item"
    >
      <div
        data-testid="nav-item"
      >
        Training
      </div>
    </li>
    <li
      class="menu-item"
    >
      <div
        data-testid="nav-item"
      >
        Manuals
      </div>
    </li>
    <li
      class="menu-item"
    >
      <div
        data-testid="nav-item"
      >
        About
      </div>
    </li>
    <li
      class="menu-item"
    >
      <div
        data-testid="nav-item"
      >
        Contact
      </div>
    </li>
    <div
      data-testid="sidebar-language-switch"
    >
      en
    </div>
  </ul>
  <div
    style="display: flex; flex-direction: column; gap: 1.5vh; margin-top: 2vh;"
  >
    <a
      data-testid="sidebar-quote-button"
      href="/Product#buy"
      style="border: 2px solid var(--main); background-color: white; color: var(--main);"
    >
      Request a quote
    </a>
    <a
      data-testid="sidebar-button"
      href="https://dosismart.com"
    >
      Get Started
    </a>
  </div>
</div>
`;
